// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackupComplete renders correctly when social backup is complete 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Light",
          "fontSize": 22,
          "marginTop": 20,
          "paddingBottom": 20,
          "paddingHorizontal": 40,
          "textAlign": "center",
        }
      }
    >
      backupComplete.2
    </Text>
  </View>
</RNCSafeAreaView>
`;

exports[`BackupComplete renders correctly when social backup is not complete 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <svg
      fill="none"
      height={32}
      style={Object {}}
      viewBox="0 0 32 32"
      width={32}
    >
      <path
        d="M8.414 15.086a2 2 0 10-2.828 2.828l2.828-2.828zM12.5 22l-1.414 1.414a2 2 0 002.8.029L12.5 22zm13.885-10.557a2 2 0 00-2.77-2.886l2.77 2.886zm-20.8 6.471l5.5 5.5 2.83-2.828-5.5-5.5-2.83 2.828zm8.3 5.529l12.5-12-2.77-2.886-12.5 12 2.77 2.886z"
        fill="#42D689"
        style={Object {}}
      />
    </svg>
  </View>
</RNCSafeAreaView>
`;
